=== HEAD

* Add Database#run method for executing arbitrary SQL on a database (jeremyevans)

* Handle index parsing correctly for tables in a non-default schema on JDBC (jfirebaugh)

* Handle unique index parsing correctly when connecting to MSSQL via JDBC (jfirebaugh)

* Add support for converting Time/DateTime to local or UTC time upon storage, retrieval, or typecasting (jeremyevans)

* Accept a hash when typecasting values to date, time, and datetime types (jeremyevans)

* Make JDBC adapter prepared statements support booleans, blobs, and potentially any type of object (jfirebaugh)

* Refactor the inflection support and modify the default inflections (jeremyevans, dlee)

* Make the serialization and lazy_attribute plugins add accessor methods to modules included in the class (jeremyevans)

* Make Database#schema on JDBC include a :column_size entry specifying the maximum length/precision for the column (jfirebaugh)

* Make Database#schema on JDBC accept a :schema option (dlee)

* Fix Dataset#import when called with a dataset (jeremyevans)

* Give a much more descriptive error message if the mysql.rb driver is detected (jeremyevans)

* Make postgres adapter work with a modified postgres-pr that raises PGError (jeremyevans)

* Make ODBC adapter respect Sequel.datetime_class (jeremyevans)

* Add support for generic concepts of CURRENT_{DATE,TIME,TIMESTAMP} (jeremyevans)

* Add a timestamps plugin for automatically creating hooks for create and update timestamps (jeremyevans)

* Add support for serializing to json (derdewey)

=== 3.3.0 (2009-08-03)

* Add an assocation_proxies plugin that uses proxies for associations (jeremyevans)

* Have the add/remove/remove_all methods take additional arguments and pass them to the internal methods (clivecrous)

* Move convert_tinyint_to_bool method from Sequel to Sequel::MySQL (jeremyevans)

* Model associations now default to associating to classes in the same scope (jeremyevans, nougad) (#274)
